--- a/webclone/style.css
+++ b/webclone/style.css
@@ -1,6 +1,7 @@
 html, body {
   height: 100%;
   width: 100%;
+  box-sizing: border-box;
 }
 .header {
   width: 100%;
@@ -99,7 +100,7 @@ html, body {
   border-radius: 25px;
 }
 .w3-btn a:hover {
-  background-color: #99ff33
+  background-color: #99ff33;
 }
 .container{
   background-color: #e6e6e6;
@@ -123,6 +124,9 @@ html, body {
   font-weight: bold;
   font-family: sans-serif;
 }
+.container1 a:hover {
+  color: #595959;
+}
 .left {
   width: 32%;
   text-align: center;
@@ -130,18 +134,383 @@ html, body {
   font-size: 20px;
   margin-top: 3%;
   border-right: 1px solid black;
-  margin-left: 5%;
+  margin-left: 2%;
   margin-bottom: 3%;
 }
 .left div {
   margin-top: 10%;
   width: 50%;
   margin-left: 25%;
-  margin-bottom: 5%;
+  margin-bottom: 7%;
+  font-size: 21px;
 }
 .left a {
   color: #ffcc66;
-  margin-top: 5%;
+  margin-top: 12%;
   font-size: 20px;
   text-decoration: none;
+  font-size: 16px;
+}
+.center {
+  width: 32%;
+  text-align: center;
+  float: left;
+  font-size: 20px;
+  margin-top: 3%;
+  border-right: 1px solid black;
+  margin-bottom: 3%;
+}
+.center div {
+  margin-top: 4%;
+  width: 50%;
+  margin-left: 25%;
+  margin-bottom: 2%;
+}
+.center a {
+  text-decoration: none;
+  color: #ffcc66;
+}
+.company {
+  font-size: 16px;
+}
+.right {
+  text-align: center;
+  font-size: 20px;
+  margin-top: 3%;
+  margin-bottom: 3%;
+  margin-right: 2%
+}
+.right div {
+  margin-top: 2%;
+  width: 20%;
+  float: right;
+  margin-right: 5%;
+  font-size: 21px;
+  margin-bottom: 0.2%
+}
+.right a {
+  font-size: 16px;
+  color: #ffcc66;
+  text-decoration: none;
+}
+.container-main {
+  background-color: #e6e6e6;;
+  margin-top: 27%;
+  box-sizing: border-box;
+  height: 130%;
+}
+.head {
+  width: 100%;
+  margin-top: 2%;
+}
+.head h1 {
+  text-align: center;
+  color: white;
+  padding-top: 2%;
+  font-size: 50px;
+  margin-bottom: 4px;
+  color: #4d4d4d;
+}
+.head h5 {
+  text-align: center;
+  font-size: 30px;
+  margin-top: 1px;
+  color: #4d4d4d;
+}
+.help {
+  color: #d2ff4d;
+}
+.container-body-left {
+  float: left;
+  width: 45%;
+  flex: 1;
+  margin-left: 4%;
+  margin-top: 2%;
+  margin-bottom: 2%;
+  margin-right: 0.5%;
+}
+.col-md-1 {
+  font-size: 20px;
+  display: flex;
+  flex-direction: column;
+  display: inline-flex;
+  flex: 1;
+}
+.col-1 div {
+  margin-top: 2%;
+  margin-bottom: 2%;
+  font-size: 30px;
+  background-color: white;
+  padding-top: 30px;
+  padding-left: 30px;
+  padding-right: 30px;
+  padding-bottom: 20px;
+  margin-left: 2%;
+  text-align: center;
+  color: #4d4d4d;
+  font-family: sans-serif;
+}
+.container-body-right {
+  float: right;
+  width: 45%;
+  flex: 1;
+  margin-left: 0.5%;
+  margin-top: 2%;
+  margin-bottom: 2%;
+  margin-right: 4%;
+}
+.col-md-2 {
+  font-size: 20px;
+  display: flex;
+  flex-direction: column;
+  display: inline-flex;
+  flex: 1;
+}
+.col-2 div {
+  margin-top: 2%;
+  margin-bottom: 2%;
+  font-size: 30px;
+  background-color: white;
+  padding: 30px;
+  margin-right: 2%;
+  text-align: center;
+  color: #4d4d4d;
+  font-family: sans-serif;
+}
+.col-1 p {
+  font-size: 18px;
+  color: #4d4d4d;
+}
+.col-2 p {
+  font-size: 18px;
+  color: #4d4d4d;
+}
+.w4-btn {
+  margin-top: 52%;
+  margin-left: 45%;
+}
+.w4-btn a {
+  background-color: #4CAF50;
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  font-size: 20px;
+  border-radius: 25px;
+}
+.w4-btn a:hover {
+  background-color: #99ff33;
+}
+.main-row-container {
+  box-sizing: border-box;
+}
+.top-head {
+  text-align: center;
+  font-size: 35px;
+  color: #4d4d4d;
+  margin-top: 3.5%;
+  margin-bottom: 3.5%;
+  font-family: sans-serif;
+}
+.row-container {
+  display: flex;
+  justify-content: space-between;
+}
+.row {
+  display: flex;
+  display: inline-flex;
+}
+.row-1-container {
+  display: flex;
+  box-sizing: border-box;
+}
+.row-1 {
+  display: flex;
+  display: inline-flex;
+}
+.img-1 {
+  position: relative;
+}
+#logo-1 {
+  background-image:url('http://cdn01.wideopentech.com/themes/wot-2013-gm/_/img/wot-mark.svg');
+    background-position:inherit;
+    width: 50px;
+    height: 50px;
+    position: absolute;
+    top: 30%;
+    right: 44%;
+    display: none;
+}
+.img-1:hover #logo-1 {
+  display: block;
+}
+#content-1 {
+  position: absolute;
+  top: 45%;
+  text-align: center;
+  font-size: 20px;
+  color: white;
+  background-color: black;
+  display: none;
+  font-weight: bold;
+  font-family: sans-serif;
+  width: 425px;
+}
+.img-1:hover #content-1 {
+  display: block;
+}
+.img-2 {
+  position: relative;
+}
+#logo-2 {
+  background-image:url('http://cdn01.wideopentech.com/themes/wot-2013-gm/_/img/wot-mark.svg');
+    background-position:inherit;
+    width: 50px;
+    height: 50px;
+    position: absolute;
+    top: 30%;
+    right: 40%;
+    display: none;
+}
+.img-2:hover #logo-2 {
+  display: block;
+}
+#content-2 {
+  position: absolute;
+  top: 45%;
+  text-align: center;
+  font-size: 20px;
+  color: white;
+  background-color: black;
+  display: none;
+  font-weight: bold;
+  font-family: sans-serif;
+}
+.img-2:hover #content-2 {
+  display: block;
+}
+.img-3 {
+  position: relative;
+}
+#logo-3 {
+  background-image:url('http://cdn01.wideopentech.com/themes/wot-2013-gm/_/img/wot-mark.svg');
+    background-position:inherit;
+    width: 50px;
+    height: 50px;
+    position: absolute;
+    top: 30%;
+    right: 40%;
+    display: none;
+}
+.img-3:hover #logo-3 {
+  display: block;
+}
+#content-3 {
+  position: absolute;
+  top: 45%;
+  text-align: center;
+  font-size: 20px;
+  color: white;
+  background-color: black;
+  display: none;
+  font-weight: bold;
+  font-family: sans-serif;
+}
+.img-3:hover #content-3 {
+  display: block;
+}
+.img-a {
+  position: relative;
+}
+#logo-a {
+  background-image:url('http://cdn01.wideopentech.com/themes/wot-2013-gm/_/img/wot-mark.svg');
+    background-position:inherit;
+    width: 50px;
+    height: 50px;
+    position: absolute;
+    top: 30%;
+    right: 44%;
+    display: none;
+}
+.img-a:hover #logo-a {
+  display: block;
+}
+#content-a {
+  position: absolute;
+  top: 45%;
+  text-align: center;
+  font-size: 20px;
+  color: white;
+  background-color: black;
+  display: none;
+  font-weight: bold;
+  font-family: sans-serif;
+}
+.img-a:hover #content-a {
+  display: block;
+}
+.img-b {
+  position: relative;
+}
+#logo-b {
+  background-image:url('http://cdn01.wideopentech.com/themes/wot-2013-gm/_/img/wot-mark.svg');
+    background-position:inherit;
+    width: 50px;
+    height: 50px;
+    position: absolute;
+    top: 30%;
+    right: 40%;
+    display: none;
+}
+.img-b:hover #logo-b {
+  display: block;
+}
+#content-b {
+  position: absolute;
+  top: 45%;
+  text-align: center;
+  font-size: 20px;
+  color: white;
+  background-color: black;
+  display: none;
+  font-weight: bold;
+  font-family: sans-serif;
+}
+.img-b:hover #content-b {
+  display: block;
+}
+.img-c {
+  position: relative;
+}
+#logo-c {
+  background-image:url('http://cdn01.wideopentech.com/themes/wot-2013-gm/_/img/wot-mark.svg');
+    background-position:inherit;
+    width: 50px;
+    height: 50px;
+    position: absolute;
+    top: 30%;
+    right: 40%;
+    display: none;
+}
+.img-c:hover #logo-c {
+  display: block;
+}
+#content-c {
+  position: absolute;
+  top: 45%;
+  text-align: center;
+  font-size: 20px;
+  color: white;
+  background-color: black;
+  display: none;
+  font-weight: bold;
+  font-family: sans-serif;
+}
+.img-c:hover #content-c {
+  display: block;
+}
+#content-b a {
+  text-decoration: none;
+  color: white;
 }
