--- a/webclone/style.css
+++ b/webclone/style.css
@@ -328,6 +328,7 @@ html, body {
 .row-1 {
   display: flex;
   display: inline-flex;
+  margin-top: -0.5%;
 }
 .img-1 {
   position: relative;
@@ -338,8 +339,8 @@ html, body {
     width: 50px;
     height: 50px;
     position: absolute;
-    top: 30%;
-    right: 44%;
+    top: 28%;
+    right: 45%;
     display: none;
 }
 .img-1:hover #logo-1 {
@@ -351,11 +352,13 @@ html, body {
   text-align: center;
   font-size: 20px;
   color: white;
-  background-color: black;
+  background-color: #4d4d4d;
+  border-radius: 15px;
+  left: 5%;
   display: none;
   font-weight: bold;
   font-family: sans-serif;
-  width: 425px;
+  width: 90%;
 }
 .img-1:hover #content-1 {
   display: block;
@@ -369,8 +372,8 @@ html, body {
     width: 50px;
     height: 50px;
     position: absolute;
-    top: 30%;
-    right: 40%;
+    top: 28%;
+    right: 45%;
     display: none;
 }
 .img-2:hover #logo-2 {
@@ -382,7 +385,10 @@ html, body {
   text-align: center;
   font-size: 20px;
   color: white;
-  background-color: black;
+  background-color: #4d4d4d;
+  border-radius: 15px;
+  width: 90%;
+  left: 5%;
   display: none;
   font-weight: bold;
   font-family: sans-serif;
@@ -399,8 +405,8 @@ html, body {
     width: 50px;
     height: 50px;
     position: absolute;
-    top: 30%;
-    right: 40%;
+    top: 28%;
+    right: 45%;
     display: none;
 }
 .img-3:hover #logo-3 {
@@ -412,7 +418,10 @@ html, body {
   text-align: center;
   font-size: 20px;
   color: white;
-  background-color: black;
+  background-color: #4d4d4d;
+  border-radius: 15px;
+  width: 90%;
+  left: 5%;
   display: none;
   font-weight: bold;
   font-family: sans-serif;
@@ -429,8 +438,8 @@ html, body {
     width: 50px;
     height: 50px;
     position: absolute;
-    top: 30%;
-    right: 44%;
+    top: 28%;
+    right: 45%;
     display: none;
 }
 .img-a:hover #logo-a {
@@ -442,7 +451,10 @@ html, body {
   text-align: center;
   font-size: 20px;
   color: white;
-  background-color: black;
+  background-color: #4d4d4d;
+  border-radius: 15px;
+  width: 90%;
+  left: 5%;
   display: none;
   font-weight: bold;
   font-family: sans-serif;
@@ -459,8 +471,8 @@ html, body {
     width: 50px;
     height: 50px;
     position: absolute;
-    top: 30%;
-    right: 40%;
+    top: 28%;
+    right: 45%;
     display: none;
 }
 .img-b:hover #logo-b {
@@ -472,7 +484,10 @@ html, body {
   text-align: center;
   font-size: 20px;
   color: white;
-  background-color: black;
+  background-color: #4d4d4d;
+  border-radius: 15px;
+  width: 90%;
+  left: 5%;
   display: none;
   font-weight: bold;
   font-family: sans-serif;
@@ -489,8 +504,8 @@ html, body {
     width: 50px;
     height: 50px;
     position: absolute;
-    top: 30%;
-    right: 40%;
+    top: 28%;
+    right: 45%;
     display: none;
 }
 .img-c:hover #logo-c {
@@ -499,10 +514,14 @@ html, body {
 #content-c {
   position: absolute;
   top: 45%;
+
   text-align: center;
   font-size: 20px;
   color: white;
-  background-color: black;
+  background-color: #4d4d4d;
+  border-radius: 15px;
+  width: 90%;
+  left: 5%;
   display: none;
   font-weight: bold;
   font-family: sans-serif;
