--- a/webclone/style.css
+++ b/webclone/style.css
@@ -10,6 +10,8 @@ html, body {
   display: flex;
   padding-left: 2%;
   padding-top: 2%;
+  margin-top: -2%;
+  background-color: white;
   z-index: 1;
 }
 .logo {
@@ -22,7 +24,7 @@ html, body {
 }
 .info a {
   font-size: 25px;
-  color: white;
+  color: gray;
   text-decoration: none;
   margin-right: 2%;
 }
@@ -532,4 +534,144 @@ html, body {
 #content-b a {
   text-decoration: none;
   color: white;
+}
+.background {
+  width: 100%;
+  height: 70%;
+  background-color: #404040;
+  margin-top: -1%;
+}
+.content {
+  text-align: center;
+  padding-top: 8%;
+}
+.content div {
+  font-size: 40px;
+  font-weight: bold;
+  font-family: inherit;
+  margin: 2%;
+  text-align: center;
+  color: white;
+}
+#box-1 {
+  width: 250px;
+  height: 10px;
+  text-align: center;
+  margin-left: 40%;
+  background-color: #d2ff4d;
+}
+.content p {
+  font-size: 20px;
+  font-weight: bold;
+  font-family: inherit;
+  margin: 2.5%;
+  color: white;
+}
+.w6-btn {
+  margin-left: 45%;
+  margin-top: 7%;
+}
+.w6-btn a {
+  background-color: #4CAF50;
+  border: solid 2px #4CAF50;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  font-size: 20px;
+  border-radius: 25px;
+}
+.w6-btn a:hover {
+  background-color: #404040;
+  color: #4CAF50;
+}
+.location {
+  box-sizing: border-box;
+}
+.location-left {
+  position: absolute;
+  height: 200px;
+  width: 500px;
+  margin-top: -27%;
+  margin-left: 5%;
+  background-color: #132023;
+  opacity: 0.7;
+}
+.location-img {
+  z-index: -1;
+  display: inline-block;
+}
+.location-left h1 {
+  color: #99ff33;
+  padding-left: 3%;
+  margin-bottom: -1%;
+  margin-top: 1%;
+
+}
+.location-left div {
+  font-size: 20px;
+  color: white;
+  margin-top: 2%;
+  margin-left: 3%;
+}
+.location-img1 {
+  z-index: -1;
+  display: inline-block;
+  margin-left: -0.3%;
+}
+.location-right {
+  position: absolute;
+  height: 200px;
+  width: 500px;
+  margin-top: -27%;
+  margin-left: 56%;
+  background-color: #132023;
+  opacity: 0.7;
+}
+.location-right h1 {
+  color: #99ff33;
+  padding-left: 3%;
+  margin-bottom: -1%;
+  margin-top: 1%;
+}
+.location-right div {
+  font-size: 20px;
+  color: white;
+  margin-top: 2%;
+  margin-left: 3%;
+}
+.footer {
+  width: 100%;
+  height: 60px;
+  background-color: white;
+  display: flex;
+}
+.wideopen {
+  width: 95%;
+  display: inline-flex;
+  justify-content: space-between;
+}
+.wideopen div {
+  font-size: 12px;
+  display: inline-flex;
+  margin-right: 35%;
+  margin-top: 1.5%;
+  color: #404040;
+}
+.wideopen div a {
+  text-decoration: none;
+  color: #99ff33;
+  display: inline-flex;
+  margin-top: 1%;
+}
+.wideopen a {
+  display: inline-flex;
+  text-decoration: none;
+  color: #404040;
+  text-align: right;
+  margin-top: 1.5%;
+  font-size: 13px;
+}
+.wideopen a:hover {
+  color: #99ff33;
 }
