--- a/webclone/style.css
+++ b/webclone/style.css
@@ -5,14 +5,15 @@ html, body {
 }
 .header {
   width: 100%;
-  height: 60px;
+  height: 55px;
   position: fixed;
   display: flex;
-  padding-left: 2%;
   padding-top: 2%;
   margin-top: -2%;
+  margin-bottom: 2%;
   background-color: white;
   z-index: 1;
+  opacity: 0.9
 }
 .logo {
   display: inline-block;
@@ -21,6 +22,7 @@ html, body {
   display: inline-block;
   margin-left: 35%;
   width: 100%;
+  margin-top: 0.5%;
 }
 .info a {
   font-size: 25px;
@@ -335,6 +337,10 @@ html, body {
 .img-1 {
   position: relative;
 }
+.img-1:hover {
+  opacity: 0.9;
+}
+
 #logo-1 {
   background-image:url('http://cdn01.wideopentech.com/themes/wot-2013-gm/_/img/wot-mark.svg');
     background-position:inherit;
@@ -367,6 +373,9 @@ html, body {
 }
 .img-2 {
   position: relative;
+}
+.img-2:hover {
+  opacity: 0.9;
 }
 #logo-2 {
   background-image:url('http://cdn01.wideopentech.com/themes/wot-2013-gm/_/img/wot-mark.svg');
@@ -401,6 +410,9 @@ html, body {
 .img-3 {
   position: relative;
 }
+.img-3:hover {
+  opacity: 0.9;
+}
 #logo-3 {
   background-image:url('http://cdn01.wideopentech.com/themes/wot-2013-gm/_/img/wot-mark.svg');
     background-position:inherit;
@@ -433,6 +445,9 @@ html, body {
 }
 .img-a {
   position: relative;
+}
+.img-a:hover {
+  opacity: 0.9;
 }
 #logo-a {
   background-image:url('http://cdn01.wideopentech.com/themes/wot-2013-gm/_/img/wot-mark.svg');
@@ -467,6 +482,9 @@ html, body {
 .img-b {
   position: relative;
 }
+.img-b:hover {
+  opacity: 0.9;
+}
 #logo-b {
   background-image:url('http://cdn01.wideopentech.com/themes/wot-2013-gm/_/img/wot-mark.svg');
     background-position:inherit;
@@ -499,6 +517,9 @@ html, body {
 }
 .img-c {
   position: relative;
+}
+.img-c:hover {
+  opacity: 0.9;
 }
 #logo-c {
   background-image:url('http://cdn01.wideopentech.com/themes/wot-2013-gm/_/img/wot-mark.svg');
