--- a/webclone/style.css
+++ b/webclone/style.css
@@ -356,17 +356,17 @@ html, body {
 }
 #content-1 {
   position: absolute;
-  top: 45%;
+  top: 0;
   text-align: center;
   font-size: 20px;
   color: white;
-  background-color: #4d4d4d;
-  border-radius: 15px;
-  left: 5%;
+  background-color: rgba(0, 0, 0, 0.8);
+  height: 100%;
+  left: 0;
   display: none;
   font-weight: bold;
   font-family: sans-serif;
-  width: 90%;
+  width: 100%;
 }
 .img-1:hover #content-1 {
   display: block;
