--- a/webclone/style.css
+++ b/webclone/style.css
@@ -8,12 +8,14 @@ html, body {
   height: 55px;
   position: fixed;
   display: flex;
+  top: 0;
   padding-top: 2%;
   margin-top: -2%;
   margin-bottom: 2%;
   background-color: white;
+  opacity: 0.9;
+  border-bottom: solid 1px black;
   z-index: 1;
-  opacity: 0.9
 }
 .logo {
   display: inline-block;
@@ -36,19 +38,16 @@ html, body {
 .bigpic {
   width: 100%;
   height: 500px;
+  margin-top: 4.4%;
 }
 .bigpic img {
   position: absolute;
   z-index: -1;
-  top: 0;
 }
 .txt {
   padding-top: 11%;
   padding-left: 25%;
   color: white;
-  padding-right: ;
-
-
 }
 #txt1 {
   font-size: 25px;
@@ -337,9 +336,6 @@ html, body {
 .img-1 {
   position: relative;
 }
-.img-1:hover {
-  opacity: 0.9;
-}
 
 #logo-1 {
   background-image:url('http://cdn01.wideopentech.com/themes/wot-2013-gm/_/img/wot-mark.svg');
@@ -358,9 +354,10 @@ html, body {
   position: absolute;
   top: 0;
   text-align: center;
+  padding-top: 35%;
   font-size: 20px;
   color: white;
-  background-color: rgba(0, 0, 0, 0.8);
+  background-color: rgba(0, 0, 0, 0.6);
   height: 100%;
   left: 0;
   display: none;
@@ -392,14 +389,15 @@ html, body {
 }
 #content-2 {
   position: absolute;
-  top: 45%;
   text-align: center;
   font-size: 20px;
   color: white;
-  background-color: #4d4d4d;
-  border-radius: 15px;
-  width: 90%;
-  left: 5%;
+  background-color: rgba(0, 0, 0, 0.6);
+  width: 100%;
+  height: 100%;
+  left: 0;
+  top: 0;
+  padding-top: 35%;
   display: none;
   font-weight: bold;
   font-family: sans-serif;
@@ -428,14 +426,15 @@ html, body {
 }
 #content-3 {
   position: absolute;
-  top: 45%;
   text-align: center;
   font-size: 20px;
   color: white;
-  background-color: #4d4d4d;
-  border-radius: 15px;
-  width: 90%;
-  left: 5%;
+  background-color: rgba(0, 0, 0, 0.6);
+  width: 100%;
+  height: 100%;
+  left: 0;
+  top: 0;
+  padding-top: 35%;
   display: none;
   font-weight: bold;
   font-family: sans-serif;
@@ -464,14 +463,15 @@ html, body {
 }
 #content-a {
   position: absolute;
-  top: 45%;
   text-align: center;
   font-size: 20px;
   color: white;
-  background-color: #4d4d4d;
-  border-radius: 15px;
-  width: 90%;
-  left: 5%;
+  background-color: rgba(0, 0, 0, 0.6);
+  width: 100%;
+  height: 53%;
+  left: 0;
+  top: 0;
+  padding-top: 35%;
   display: none;
   font-weight: bold;
   font-family: sans-serif;
@@ -500,14 +500,15 @@ html, body {
 }
 #content-b {
   position: absolute;
-  top: 45%;
   text-align: center;
   font-size: 20px;
   color: white;
-  background-color: #4d4d4d;
-  border-radius: 15px;
-  width: 90%;
-  left: 5%;
+  background-color: rgba(0, 0, 0, 0.6);
+  width: 100%;
+  height: 53%;
+  left: 0;
+  top: 0;
+  padding-top: 35%;
   display: none;
   font-weight: bold;
   font-family: sans-serif;
@@ -536,15 +537,15 @@ html, body {
 }
 #content-c {
   position: absolute;
-  top: 45%;
-
   text-align: center;
   font-size: 20px;
   color: white;
-  background-color: #4d4d4d;
-  border-radius: 15px;
-  width: 90%;
-  left: 5%;
+  background-color: rgba(0, 0, 0, 0.6);
+  width: 100%;
+  height: 52.5%;
+  left: 0;
+  top: 0;
+  padding-top: 35%;
   display: none;
   font-weight: bold;
   font-family: sans-serif;
