--- a/webclone/style.css
+++ b/webclone/style.css
@@ -17,12 +17,17 @@ html, body {
   border-bottom: solid 1px black;
   z-index: 1;
 }
+@media screen and (min-width: 480px) {
+    .header {
+
+    }
+}
 .logo {
   display: inline-block;
 }
 .info {
   display: inline-block;
-  margin-left: 35%;
+  text-align: right;
   width: 100%;
   margin-top: 0.5%;
 }
@@ -45,40 +50,44 @@ html, body {
   z-index: -1;
 }
 .txt {
-  padding-top: 11%;
-  padding-left: 25%;
-  color: white;
+
 }
 #txt1 {
   font-size: 25px;
-  text-align: left;
   font-family: sans-serif;
+  text-align: left;
+  color: white;
+  padding-left: 14%;
+  padding-top: 10%;
 }
 #txt2 {
+  text-align: center;
   font-size: 120px;
-  text-align: left;
   font-family: sans-serif;
+  color: white;
+  padding-top: -1%;
+  margin-top: -2%;
 }
+
 #box {
   height: 10px;
-  width: 80px;
+  width: 6%;
   display: inline-block;
   background-color: white;
-  margin-right: 6%;
+  margin-left: 16%;
 }
-
 #txt3 {
-  font-size: 25px;
   display: inline-block;
   text-align: center;
-
+  padding-left: 5%;
+  padding-right: 5%;
+  font-size: 25px;
 }
 #box1 {
   height: 10px;
-  width: 84px;
   display: inline-block;
+  width: 6%;
   background-color: white;
-  margin-left: 6%
 }
 .colortxt {
   color: orange;
@@ -89,8 +98,8 @@ html, body {
   font-weight: bolder;
 }
 .w3-btn {
+  margin-left: 42%;
   margin-top: 10%;
-  margin-left: 27%;
 }
 .w3-btn a {
   background-color: #4CAF50;
@@ -105,9 +114,10 @@ html, body {
 .w3-btn a:hover {
   background-color: #99ff33;
 }
-
 .container{
   background-color: #e6e6e6;
+  width: 100%;
+  box-sizing: border-box;
 }
 .text2 {
   text-align: center;
@@ -128,6 +138,10 @@ html, body {
   font-weight: bold;
   font-family: sans-serif;
 }
+.container1 {
+  width: 100%;
+  box-sizing: border-box;
+}
 .container1 a:hover {
   color: #595959;
 }
@@ -140,6 +154,7 @@ html, body {
   border-right: 1px solid black;
   margin-left: 2%;
   margin-bottom: 3%;
+  box-sizing: border-box;
 }
 .left div {
   margin-top: 10%;
@@ -162,7 +177,8 @@ html, body {
   font-size: 20px;
   margin-top: 3%;
   border-right: 1px solid black;
-  margin-bottom: 3%;
+  margin-bottom: 3.2%;
+  box-sizing: border-box;
 }
 .center div {
   margin-top: 4%;
@@ -182,7 +198,8 @@ html, body {
   font-size: 20px;
   margin-top: 3%;
   margin-bottom: 3%;
-  margin-right: 2%
+  margin-right: 2%;
+  box-sizing: border-box;
 }
 .right div {
   margin-top: 2%;
@@ -190,7 +207,8 @@ html, body {
   float: right;
   margin-right: 5%;
   font-size: 21px;
-  margin-bottom: 0.2%
+  margin-bottom: 0.3%;
+  padding-top: -0.1%;
 }
 .right a {
   font-size: 16px;
@@ -199,9 +217,10 @@ html, body {
 }
 .container-main {
   background-color: #e6e6e6;;
-  margin-top: 27%;
+  width: 100%;
+  clear: both;
   box-sizing: border-box;
-  height: 130%;
+  padding-bottom: 7%;
 }
 .head {
   width: 100%;
@@ -230,8 +249,8 @@ html, body {
   flex: 1;
   margin-left: 4%;
   margin-top: 2%;
-  margin-bottom: 2%;
   margin-right: 0.5%;
+  margin-bottom: 7%;
 }
 .col-md-1 {
   font-size: 20px;
@@ -260,7 +279,7 @@ html, body {
   flex: 1;
   margin-left: 0.5%;
   margin-top: 2%;
-  margin-bottom: 2%;
+  margin-bottom: 15%;
   margin-right: 4%;
 }
 .col-md-2 {
@@ -290,8 +309,8 @@ html, body {
   color: #4d4d4d;
 }
 .w4-btn {
-  margin-top: 52%;
-  margin-left: 45%;
+  margin-left: 36%;
+  margin-right: 55%;
 }
 .w4-btn a {
   background-color: #4CAF50;
@@ -306,8 +325,10 @@ html, body {
 .w4-btn a:hover {
   background-color: #99ff33;
 }
+
 .main-row-container {
-  box-sizing: border-box;
+  width: 100%;
+  clear: both;
 }
 .top-head {
   text-align: center;
@@ -566,9 +587,9 @@ html, body {
 }
 .background {
   width: 100%;
-  height: 70%;
   background-color: #404040;
   margin-top: -1%;
+  padding-bottom: 7%;
 }
 .content {
   text-align: center;
@@ -583,10 +604,10 @@ html, body {
   color: white;
 }
 #box-1 {
-  width: 250px;
+  width: 30%;
   height: 10px;
   text-align: center;
-  margin-left: 40%;
+  margin-left: 35%;
   background-color: #d2ff4d;
 }
 .content p {
@@ -595,10 +616,11 @@ html, body {
   font-family: inherit;
   margin: 2.5%;
   color: white;
+  margin-bottom: 12%;
 }
+
 .w6-btn {
-  margin-left: 45%;
-  margin-top: 7%;
+  margin-left: 36%;
 }
 .w6-btn a {
   background-color: #4CAF50;
@@ -620,15 +642,17 @@ html, body {
 .location-left {
   position: absolute;
   height: 200px;
-  width: 500px;
+  width: 400px;
   margin-top: -27%;
-  margin-left: 5%;
+  margin-left: 4%;
   background-color: #132023;
   opacity: 0.7;
 }
 .location-img {
-  z-index: -1;
+  position: relative;
   display: inline-block;
+  width: 49%;
+  margin-right: -0.3%;
 }
 .location-left h1 {
   color: #99ff33;
@@ -644,16 +668,16 @@ html, body {
   margin-left: 3%;
 }
 .location-img1 {
-  z-index: -1;
+  position: relative;
   display: inline-block;
-  margin-left: -0.3%;
+  width: 50%;
 }
 .location-right {
   position: absolute;
   height: 200px;
-  width: 500px;
-  margin-top: -27%;
-  margin-left: 56%;
+  width: 400px;
+  margin-top: -54%;
+  margin-left: 10%;
   background-color: #132023;
   opacity: 0.7;
 }
