--- a/webclone/style.css
+++ b/webclone/style.css
@@ -17,11 +17,7 @@ html, body {
   border-bottom: solid 1px black;
   z-index: 1;
 }
-@media screen and (min-width: 480px) {
-    .header {
 
-    }
-}
 .logo {
   display: inline-block;
 }
@@ -38,7 +34,9 @@ html, body {
   margin-right: 2%;
 }
 .info a:hover {
-  text-decoration: underline;
+  text-decoration: none;
+  border-bottom: solid 4px green;
+  padding-bottom: 1%;
 }
 .bigpic {
   width: 100%;
@@ -52,7 +50,7 @@ html, body {
 .txt {
 
 }
-#txt1 {
+#txt-11 {
   font-size: 25px;
   font-family: sans-serif;
   text-align: left;
@@ -727,4 +725,38 @@ html, body {
 }
 .wideopen a:hover {
   color: #99ff33;
+}
+@media screen and (max-width: 450px) {
+     .left {
+        display: flex;
+        flex-direction: column;
+        margin-right: 0;
+        width: 100%;
+        border-right: none;
+   }
+    .center {
+        display: flex;
+        flex-direction: column;
+        margin-right: 0;
+        width: 100%;
+        border-right: none;
+    }
+    .right {
+        display: flex;
+        flex-direction: column;
+        padding-left: 1%;
+        width: 100%;
+        border-right: none;
+    }
+
+    .container1 {
+        display: flex;
+        flex-direction: column;
+        text-align: center;
+    }
+
+    .col-imgs {
+        margin: 0;
+    }
+
 }
