--- a/webclone/style.css
+++ b/webclone/style.css
@@ -50,7 +50,7 @@ html, body {
 .txt {
 
 }
-#txt-11 {
+.txt-11 {
   font-size: 25px;
   font-family: sans-serif;
   text-align: left;
@@ -58,7 +58,7 @@ html, body {
   padding-left: 14%;
   padding-top: 10%;
 }
-#txt2 {
+.txt2 {
   text-align: center;
   font-size: 120px;
   font-family: sans-serif;
@@ -67,21 +67,21 @@ html, body {
   margin-top: -2%;
 }
 
-#box {
+.box {
   height: 10px;
   width: 6%;
   display: inline-block;
   background-color: white;
   margin-left: 16%;
 }
-#txt3 {
+.txt3 {
   display: inline-block;
   text-align: center;
   padding-left: 5%;
   padding-right: 5%;
   font-size: 25px;
 }
-#box1 {
+.box1 {
   height: 10px;
   display: inline-block;
   width: 6%;
@@ -155,10 +155,9 @@ html, body {
   box-sizing: border-box;
 }
 .left div {
-  margin-top: 10%;
   width: 50%;
   margin-left: 25%;
-  margin-bottom: 7%;
+  margin-bottom: 3%;
   font-size: 21px;
 }
 .left a {
@@ -201,11 +200,8 @@ html, body {
 }
 .right div {
   margin-top: 2%;
-  width: 20%;
-  float: right;
-  margin-right: 5%;
   font-size: 21px;
-  margin-bottom: 0.3%;
+  margin-bottom: 2%%;
   padding-top: -0.1%;
 }
 .right a {
@@ -726,11 +722,10 @@ html, body {
 .wideopen a:hover {
   color: #99ff33;
 }
-@media screen and (max-width: 450px) {
+@media screen and (max-width: 550px) {
      .left {
         display: flex;
         flex-direction: column;
-        margin-right: 0;
         width: 100%;
         border-right: none;
    }
@@ -740,6 +735,7 @@ html, body {
         margin-right: 0;
         width: 100%;
         border-right: none;
+        margin-top: -4%;
     }
     .right {
         display: flex;
@@ -747,6 +743,7 @@ html, body {
         padding-left: 1%;
         width: 100%;
         border-right: none;
+        margin-top: -2%;
     }
 
     .container1 {
@@ -757,6 +754,97 @@ html, body {
 
     .col-imgs {
         margin: 0;
+    }
+
+    .container-main {
+       display: flex;
+       flex-direction: column;
+       width: 100%;
+    }
+
+    .container-body-left {
+       display: flex;
+       flex-direction: column;
+       width: 98%;
+       margin: 0;
+    }
+
+    .container-body-right {
+       display: flex;
+       flex-direction: column;
+       width: 100%;
+    }
+
+    .info {
+      display: none;
+    }
+
+    .main-row-container{
+      display: flex;
+      flex-direction: column;
+    }
+
+    .row-container {
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+        display: inline-block;
+    }
+    .row {
+      display: flex;
+      flex-direction: column;
+      width: 100%;
+    }
+    .row-1 {
+      display: flex;
+      flex-direction: column;
+      width: 100%;
+    }
+
+     .row-1-container {
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+        display: inline-block;
+    }
+}
+@media screen and (max-width: 950px) {
+    .txt-11 {
+        font-family: sans-serif;
+        text-align: left;
+        color: white;
+        padding-left: 8%;
+        padding-top: 5%;
+        font-size: 15px;
+    }
+    .txt2 {
+        text-align: center;
+        font-family: sans-serif;
+        color: white;
+        padding-top: -1%;
+        margin-top: 2%;
+        font-size: 80px;
+        margin-top: 25%
+    }
+    .box {
+        height: 10px;
+        width: 6%;
+        display: inline-block;
+        background-color: white;
+        margin-left: 8%;
+    }
+    .txt3 {
+        display: inline-block;
+        text-align: center;
+        padding-left: 2%;
+        padding-right: 2%;
+        font-size: 20px;
+    }
+    .box1 {
+        height: 10px;
+        display: inline-block;
+        width: 6%;
+        background-color: white;
     }
 
 }
